# Zero-Shots

fin-ops-pilot-agents/: .gitignore  main.py  pyproject.toml  requirements.txt
fin-ops-pilot-agents/src/: config.py  server.py  services.py
fin-ops-pilot-frontend/: finOpsFrontend.txt  package-lock.json  package.json
fin-ops-pilot-frontend/src/: App.js
fin-ops-pilot-frontend/src/components/: FinOpsCopilot.js
fin-ops-pilot-frontend/src/data/: templates.json
fin-ops-pilot-livekitServer/: README.md  pyproject.toml
fin-ops-pilot-livekitServer/context/: client_details.txt  policy_schedule.txt
fin-ops-pilot-livekitServer/src/: agent.py
fin-ops-pilot-livekitServer/src/utils/: __init__.py  slidingWindow.py
