[project]
name = "fin-ops-pilot-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.9",
    "browser-use>=0.1.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.2.0",
    "aioconsole>=0.7.0",
]
