[project]
name = "fin-ops-pilot-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "livekit>=1.0.19",
    "livekit-api>=0.6.0",
    "openai>=2.8.1",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.9",
    "browser-use>=0.1.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.2.0",
    "aioconsole>=0.7.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
]
